# sdk-nrf

./: CODEOWNERS  west.yml
.github/: labeler.yml
applications/machine_learning/: Kconfig  Kconfig.sysbuild  app_desc.rst  sample.yaml  sysbuild.cmake
applications/machine_learning/common/: Kconfig
applications/machine_learning/configuration/common/: event_proxy.h
applications/machine_learning/configuration/nrf54h20dk_nrf54h20_cpuapp/: app.overlay  app_release.overlay  app_singlecore.overlay  buttons_def.h  click_detector_def.h  event_proxy_def.h  led_state_def.h  prj.conf  prj_release.conf  prj_singlecore.conf  sensor_manager_def.h
applications/machine_learning/configuration/nrf54l15pdk_nrf54l15_cpuapp/: app.overlay  buttons_def.h  prj.conf
applications/machine_learning/remote/: CMakeLists.txt  Kconfig  prj.conf
applications/machine_learning/remote/boards/: nrf54h20dk_nrf54h20_cpuppr.conf  nrf54h20dk_nrf54h20_cpuppr.overlay
applications/machine_learning/remote/src/: main.c
applications/machine_learning/src/: Kconfig.ml_app
applications/machine_learning/src/modules/: Kconfig.data_aggregator_release  data_aggregator_release.c
applications/machine_learning/sysbuild/hci_ipc/: prj.conf
applications/machine_learning/sysbuild/remote/: prj.conf
doc/nrf/libraries/others/: sfloat.rst
doc/nrf/releases/: release-notes-changelog.rst
doc/nrf/releases_and_maturity/releases/: release-notes-changelog.rst
include/: net_core_monitor.h  sfloat.h
lib/sfloat/: Kconfig  sfloat.c
samples/bluetooth/direct_test_mode/: CMakeLists.txt  Kconfig
samples/bluetooth/direct_test_mode/src/: main.c
samples/multicore/hello_world/: app.overlay
samples/nrf_rpc/entropy_nrf53/cpuapp/: prj.conf
samples/nrf_rpc/entropy_nrf53/cpunet/: prj.conf
samples/peripheral/radio_test/: sample.yaml
samples/peripheral/radio_test/src/: main.c  radio_test.c
subsys/: CMakeLists.txt
subsys/bluetooth/rpc/client/: bt_rpc_conn_client.c
subsys/dm/: dm.c  timeslot_queue.c  timeslot_queue.h
subsys/net_core_monitor/: app_core.c  net_core.c
tests/lib/sfloat/: CMakeLists.txt
tests/lib/sfloat/src/: main.c
(+15 files in other folders)
